--- a/wp-content/themes/AP-Birkemosegaard-theme/assets/css/header.css
+++ b/wp-content/themes/AP-Birkemosegaard-theme/assets/css/header.css
@@ -3,6 +3,8 @@ header{
     background-color: var(--white);
     padding: 0 2rem;
     position: sticky;
+    z-index: 100;
+    top: 0;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -155,7 +157,7 @@ span.icon-nav:hover{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 1000;
     background-color: var(--overlay);
 }
 .cart-modal-content{
