--- a/wp-content/themes/AP-Birkemosegaard-theme/assets/css/cards.css
+++ b/wp-content/themes/AP-Birkemosegaard-theme/assets/css/cards.css
@@ -7,41 +7,38 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  max-width: 17.5rem;
 }
 .card-wrapper{
   text-decoration: none;
 }
-.card-wrapper img{
-  max-width: 100%;
-  height: auto;
+
+.card-img img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center center;
 }
 .card-content{
-  padding: 0.5rem 1rem;
+  padding: 0 1rem;
 }
 .card-heading{
   font-family: "Lato", sans-serif;
   color: var(--green900);
   font-size: 1.25rem;
-  margin-bottom: 6px;
+  margin: 6px 0;
 }
-.btn-card{
-  margin: 1rem;
-  margin-top: 0;
-  width: auto;
-  font-weight: 600;
-}
-
 
 
 .oko-icons-card{
   display: flex;
-  height: 1.25rem;
+  height: 1rem;
   gap: 12px;
   margin-bottom: 6px;
 }
 .product-price{
  font-size: 1.25rem;
- font-weight: 700;
+ font-weight: 800;
 }
 
 /* 
