--- a/wp-content/themes/AP-Birkemosegaard-theme/assets/css/cards.css
+++ b/wp-content/themes/AP-Birkemosegaard-theme/assets/css/cards.css
@@ -8,19 +8,33 @@
   flex-direction: column;
   justify-content: space-between;
   max-width: 17.5rem;
+
+  transition: transform 0.3s ease;
+}
+.card:hover{
+  transform: scale(1.03);  
 }
 .card-wrapper{
+  color: unset;
   text-decoration: none;
 }
-
+.card-img{
+  position: relative;
+}
 .card-img img{
   width: 100%;
   height: 100%;
   object-fit: contain;
   object-position: center center;
 }
+
 .card-content{
   padding: 0 1rem;
+}
+.card-content-wrapper{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .card-heading{
   font-family: "Lato", sans-serif;
@@ -43,28 +57,37 @@
  font-weight: 800;
 }
 
-/* 
-
-
-.wishlist {
+/*—————————— Nyhed Badge —————————*/
+.badge {
+  background-color: var(--orange);
+  color: white;
+  padding: 0.2rem 0.6rem;
+  font-size: 0.8rem;
+  border-radius: 6px;
   position: absolute;
-  top: 0.3rem;
-  right: 0.5rem;
-  background: none;
-  border: none;
-  font-size: 2rem;
-  cursor: pointer;
-  color: var(--black);
+  top: 1rem;
+  left: 1rem;
+  z-index: 2;
 }
-.wishlist img {
-  width: 24px;
-  height: 24px;
-  object-fit: contain;
-}
-.wishlist[aria-pressed="true"] img {
-  filter: hue-rotate(0deg) saturate(1000%) brightness(100%) contrast(100%);
-}
+/*————————————————————————————————*/
 
+/*—————————— Wishlist —————————*/
+.heart-icon {
+  cursor: pointer;
+  color: var(--green600);
+  transition: transform 0.3s ease;
+}
+.heart-icon:hover{
+  transform: scale(1.1);
+}
+.heart-icon[aria-pressed="true"]{
+  font-variation-settings: 'FILL' 1;
+  color: var(--red);
+}
+.heart-icon.animate-pop {
+  animation: pop 0.3s ease;
+}
+/* Animation til hjerteikon på produkter */
 @keyframes pop {
   0% {
     transform: scale(1);
@@ -76,88 +99,4 @@
     transform: scale(1);
   }
 }
-
-.wishlist img.animate-pop {
-  animation: pop 0.3s ease;
-}
-.badge {
-  background-color: var(--orange);
-  color: white;
-  padding: 0.2rem 0.6rem;
-  font-size: 0.8rem;
-  border-radius: 5px;
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
-  z-index: 2;
-}
-.vaegt {
-  font-size: 0.9rem;
-  color: var(--green700);
-  margin: 0.5rem 0;
-}
-.ikoner img {
-  height: 20px;
-  margin: 0 2px;
-}
-.pris {
-  font-weight: bold;
-  font-size: 1.1rem;
-  margin: 1rem 0 0.5rem;
-}
-.spaceBetweenforside {
-  display: flex;
-  justify-content: space-between;
-  color: #2d2d1f;
-  align-items: baseline;
-}
-.spaceBetweenforside h2 {
-  margin-bottom: 0;
-}
-.visAlle {
-  color: var(--grey);
-}
-.btn-filled-forside {
-  color: var(--white);
-  background-color: var(--green600);
-  padding: 12px 32px;
-  border-radius: 6px;
-  width: fit-content;
-  text-align: center;
-  cursor: pointer;
-  font-weight: 500;
-  text-decoration: none;
-  height: 48px;
-  text-align: center;
-}
-.btn-filled-forside:hover {
-  background-color: var(--green500);
-  transition: 0.3s;
-  box-shadow: var(--boxShadow);
-}
-
-.btn-filled-forside:active {
-  background-color: var(--green700);
-}
-
-.image-wrapper-forside {
-  margin: -1.2rem -1.2rem 1rem -1.2rem;
-  position: relative;
-  overflow: hidden;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-}
-
-.produkt-billede-forside {
-  width: 100%;
-  height: 230px;
-  object-fit: fill;
-}
-.zoom-billede img {
-  transition: transform 0.4s ease;
-  display: block;
-}
-
-.zoom-billede:hover img {
-  transform: scale(1.05);
-} */
+/*————————————————————————————————*/
