--- a/wp-content/themes/AP-Birkemosegaard-theme/assets/css/footer.css
+++ b/wp-content/themes/AP-Birkemosegaard-theme/assets/css/footer.css
@@ -1,5 +1,6 @@
+/*----------Footer----------*/
 footer{
-    margin-top: var(--large);
+    margin-top: 2rem;
     background-color: var(--white);
     padding: 2rem;
 }
@@ -23,9 +24,13 @@ footer h4, footer .logo{
 }
 .footer-columns-container{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    margin: 3rem 0;
+    margin-bottom: 2rem;
     gap: 2rem;
+}
+.footer-column {
+  width: calc(33.333% - 1.5rem);
 }
 
 .footer-column div:not(.logo){
@@ -72,4 +77,36 @@ footer hr{
 .payment-icons{
     justify-self: end;
     height: 2rem;
+    width: fit-content;
 }
+
+
+@media (max-width: 1439px) {
+  .footer-column {
+    width: calc(50% - 1rem);
+  }
+}
+
+@media (max-width: 1024px) {
+  .footer-columns-container {
+    flex-direction: column;
+    gap: 3rem;
+  }
+
+  .footer-column {
+    width: 100%;
+  }
+}
+
+@media (max-width: 767px) {
+    .footer-bottom {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+
+
+
+/*--------------------------*/
+
