--- a/wp-content/themes/AP-Birkemosegaard-theme/assets/css/general-css.css
+++ b/wp-content/themes/AP-Birkemosegaard-theme/assets/css/general-css.css
@@ -1,39 +1,39 @@
 *{
-    margin: 0;
-    box-sizing: border-box;
-    font-optical-sizing: auto;
-    font-family: "Lato", sans-serif;
+  margin: 0;
+  box-sizing: border-box;
+  font-optical-sizing: auto;
+  font-family: "Lato", sans-serif;
 }
 
 /* Farver */
 :root{
---green100: #F0F4D3; 
---green500: #9AB032;
---green600: #849A28;
---green700: #5C6B20;
---green800: #3e491e;
---green900: #2c3414;
+  --green100: #F0F4D3; 
+  --green500: #9AB032;
+  --green600: #849A28;
+  --green700: #5C6B20;
+  --green800: #3e491e;
+  --green900: #2c3414;
 
---sand100: #f9f7f3;
---sand200: #f3f1e8;
---sand300: #e1dbc7;
+  --sand100: #f9f7f3;
+  --sand200: #f3f1e8;
+  --sand300: #e1dbc7;
 
---white: #ffffff;
---orange: #ef8000;
---yellow: #fffac2;
---red: #d80100;
---pink: #ffc1c1;
---lightGrey: #bdbdbd;
---grey: #7c7c7c;
+  --white: #ffffff;
+  --orange: #ef8000;
+  --yellow: #fffac2;
+  --red: #d80100;
+  --pink: #ffc1c1;
+  --lightGrey: #bdbdbd;
+  --grey: #7c7c7c;
 
-/* Box-shadow & overlay */
---boxShadow: 0px 0px 20px 0px rgba(0,0,0,0.10);
---overlay: #1f1f1f70;
+  /* Box-shadow & overlay */
+  --boxShadow: 0px 0px 20px 0px rgba(0,0,0,0.10);
+  --overlay: #1f1f1f70;
 
-/* Spacing */
---small: 2rem;
---standard: 4rem;
---large: 8rem;
+  /* Spacing */
+  --small: 2rem;
+  --standard: 4rem;
+  --large: 8rem;
 
 
 }
@@ -195,7 +195,7 @@ p {
 .form-field{
     position: relative;
 }
-.form-field input{
+.form-field input, .form-field textarea{
     width: 100%;
     border: 1px solid var(--lightGrey);
     border-radius: 6px;
@@ -212,11 +212,19 @@ p {
     left: 12px;
     transition: all 0.2s ease;
 }
+.form-field textarea{
+  resize: vertical;
+  height: 120px;
+
+}
 .form-field input:focus + label,
-.form-field input:not(:placeholder-shown) + label{
+.form-field textarea:focus + label,
+.form-field input:not(:placeholder-shown) + label,
+.form-field textarea:not(:placeholder-shown) + label{
     top: -8px;
     left: 10px;
     font-size: 0.75rem;
+    
 }
 .form-field .toggle-password {
     position: absolute;
@@ -408,81 +416,3 @@ span.checkbox-icon{
   display: none;
 }
 
-
-
-
-
-.kort-sektion {
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  gap: 1rem;
-  background-color: #eae5d3;
-  border-radius: 16px;
-  padding: 2rem;
-  margin: 2rem 0;
-}
- 
-.info-boks {
-  background-color: white;
-  padding: 1.5rem;
-  border-radius: 12px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  transition: opacity 0.4s ease;
-}
-.info-boks h3 {
-  font-size: 1.5rem;
-}
- 
-.info-boks.fade {
-  opacity: 0;
-}
- 
-.info-boks img {
-  width: 60%;
-}
- 
-.kort-container {
-  height: 500px;
-  width: 100%;
-  border-radius: 12px;
-  overflow: hidden;
-}
- 
-.accordion-container {
-  background-color: white;
-  padding: 0;
-  border-radius: 12px;
-  max-height: 500px;
-  overflow-y: auto;
-}
- 
-button.accordion-button {
-  all: unset;
-  cursor: pointer;
-  font-weight: bold;
-  display: block;
-  width: 100%;
-  padding: 1rem;
-  border-bottom: 1px solid #3e491e;
-  transition: transform 0.2s ease, background-color 0.2s ease, color 0.2s ease;
-  box-sizing: border-box;
-}
- 
-button.accordion-button:hover {
-  transform: scale(1.05);
-  background-color: var(--green500);
-  border-radius: 0;
-}
- 
-button.accordion-button:active {
-  transform: scale(0.97);
-}
-.afhentningssteder h2 {
-  text-align: center;
-  color: var(--green800);
-}
-
-.test{
-    width: 200px;
-    height: 200px;
-}
