--- a/wp-content/themes/AP-Birkemosegaard-theme/assets/css/header.css
+++ b/wp-content/themes/AP-Birkemosegaard-theme/assets/css/header.css
@@ -1,14 +1,14 @@
+/*----------Header----------*/
 header{
     height: 80px;
     background-color: var(--white);
     padding: 0 2rem;
     position: sticky;
-    z-index: 100;
-    top: 0;
     display: flex;
     flex-direction: row;
     align-items: center;
     box-shadow: var(--boxShadow);
+    z-index: 99;
 }
 .logo{
     height: 64px;
@@ -124,7 +124,7 @@ span.icon-nav:hover{
 .login-popup a{
     text-decoration: none;
 }
-.login-popup a:hover{
+.login-popup a:hover:not(.btn-login){
     text-decoration: underline;
 }
 
@@ -136,8 +136,9 @@ span.icon-nav:hover{
 .form-field input:focus{
     outline: 1px solid var(--green600);
 }
-.login-popup-container a{
+.btn-login{
     width: auto;
+
 }
 
 .login-popup-last{
@@ -147,6 +148,92 @@ span.icon-nav:hover{
     align-items: center;
     margin-top: -16px;
 }
+
+/*-------Custom checkbox--------*/
+.checkbox-custom{
+    display: inline-flex;
+    cursor: pointer;
+}
+.checkbox-custom .checkbox-icon::before{
+   content: "check_box_outline_blank";
+}
+.checkbox-custom input[type="checkbox"]:checked + .checkbox-icon::before{
+    content: "check_box";
+    color: var(--green600);
+}
+span.checkbox-icon{
+  font-weight: 200;
+  font-size: 20px;
+  font-variation-settings: 'FILL' 1;
+}
+.checkbox-custom input[type="checkbox"]{
+    display: none;
+}
+/*--------------------------------*/
+
+
+/*-------Form fields--------*/
+.form-field .toggle-password {
+    position: absolute;
+    right: 12px;
+    transform: translateY(65%);
+    cursor: pointer;
+    font-size: 20px;
+    color: var(--lightGrey);
+}
+
+.form-field{
+    position: relative;
+}
+.form-field input{
+    width: 100%;
+    border: 1px solid var(--lightGrey);
+    border-radius: 6px;
+    padding: 12px 16px;
+    font-size: 1rem;
+}
+.form-field label{
+    position: absolute;
+    background: var(--white);
+    color: var(--grey);
+    padding: 0 4px;
+    top: 12px;
+    left: 12px;
+    transition: all 0.2s ease;
+}
+.form-field input:focus + label,
+.form-field input:not(:placeholder-shown) + label{
+    top: -8px;
+    left: 10px;
+    font-size: 0.75rem;
+}
+/*--------------------------------*/
+/*--------------------------------*/
+
+/*------------Cart modal-----------*/
+.cart-modal{
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    background-color: var(--overlay);
+}
+.cart-modal-content{
+    background-color: var(--white);
+    width: 50%;
+    height: 100%;
+    padding: 32px;
+    margin-left: auto;
+}
+.cart-modal-header{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid var(--green600);
+}
+/*---------------------------------*/
 
 
 /*------------Search bar----------*/
@@ -164,7 +251,7 @@ span.icon-nav:hover{
     transition: width 0.2s ease-in-out;
 }
 .search-bar:focus-within{
-    width: 250px;
+    width: 15.15rem;
     box-shadow: var(--boxShadow);
 }
 .search-input{
@@ -174,7 +261,7 @@ span.icon-nav:hover{
     border: none;
     outline: none;
     cursor: pointer;
-    width: 232px;
+    width: 14rem;
     position: absolute;
     opacity: 0;
 }
@@ -204,10 +291,98 @@ span.icon-nav:hover{
     color: var(--white);
 }
 
-/*------------Burger menu----------*/
 span.menu-toggle {
   display: none;
   font-size: 2rem;
   color: var(--green800);
   cursor: pointer;
 }
+
+/*--------------------------------*/
+
+@media (max-width: 1370px) {
+  .global-menu li a {
+    font-size: 15px;
+  }
+
+  .search-bar:focus-within{
+    width: 13.15rem;
+}
+.search-input{
+    width: 12rem;
+}
+}
+
+@media (max-width: 1250px) {
+  .global-menu li a {
+    font-size: 14px;
+  }
+
+  .search-bar:focus-within{
+    width: 10.15rem;
+}
+.search-input{
+    width: 9rem;
+}
+}
+
+@media (max-width: 1160px) {
+  .global-menu li a {
+    font-size: 12px;
+  }
+
+   .search-bar:focus-within{
+    width: 7.15rem;
+}
+.search-input{
+    width: 6rem;
+}
+}
+
+@media (max-width: 1024px) {
+    span.menu-toggle {
+    display: block;
+    margin-left: 24px;
+  }
+
+  .global-menu {
+    display: none;
+    position: absolute;
+    top: 80px;
+    right: 0;
+    background-color: var(--white);
+    width: 60%;
+    flex-direction: column;
+    box-shadow: var(--boxShadow);
+    gap: 10px;
+  }
+
+  .global-menu.active {
+    display: flex;
+  }
+
+  .global-menu {
+    padding: 25px;
+  }
+
+  .global-menu li {
+    padding: 10px;
+  }
+
+  .global-menu-icons {
+    display: flex;
+  }
+
+  .global-nav {
+    justify-content: right;
+  }
+}
+
+@media (max-width: 767px) {
+    .global-menu {
+        width: 100%;
+    }
+}
+
+
+/*-------------Header slut--------------*/
