--- a/wp-content/themes/AP-Birkemosegaard-theme/assets/css/general-css.css
+++ b/wp-content/themes/AP-Birkemosegaard-theme/assets/css/general-css.css
@@ -123,7 +123,10 @@ p {
 }
 
 
-
+.privacy-policy {
+  max-width: 900px;
+  margin: var(--standard);
+}
 /*—————————————————————————————————————————————————————————————————————————————————*/
 
 /*————————————————————————————————————— Buttons ———————————————————————————————————*/
@@ -159,7 +162,7 @@ p {
   margin: 1rem;
   margin-top: 0;
 }
-.card-btn-wrapper button{
+.btn-card{
     width: 100%;
 }
 
