--- a/wp-content/themes/AP-Birkemosegaard-theme/assets/css/footer.css
+++ b/wp-content/themes/AP-Birkemosegaard-theme/assets/css/footer.css
@@ -24,14 +24,11 @@ footer h4, footer .logo{
 }
 .footer-columns-container{
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 2rem;
     gap: 2rem;
 }
-.footer-column {
-  width: calc(33.333% - 1.5rem);
-}
+
 
 .footer-column div:not(.logo){
     display: flex;
@@ -67,8 +64,9 @@ footer hr{
 .socials{
     justify-self: start;
 }
-.socials img{
-    height: 2rem;
+.socials i{
+    font-size: 2rem;
+    color: var(--green700);
     margin-right: 1rem;
 }
 .copyright{
@@ -81,11 +79,7 @@ footer hr{
 }
 
 
-@media (max-width: 1439px) {
-  .footer-column {
-    width: calc(50% - 1rem);
-  }
-}
+
 
 @media (max-width: 1024px) {
   .footer-columns-container {
@@ -102,6 +96,7 @@ footer hr{
     .footer-bottom {
         display: flex;
         flex-direction: column;
+        gap: 1rem;
     }
 }
 
