--- a/wp-content/themes/AP-Birkemosegaard-theme/assets/css/pages/single-product.css
+++ b/wp-content/themes/AP-Birkemosegaard-theme/assets/css/pages/single-product.css
@@ -21,12 +21,12 @@
     border-radius: 12px;
 }
 
-.product-info{
+.product-info-single{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-.product-info-info{
+.product-info-info-single{
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
@@ -101,7 +101,7 @@ span.error-icon, .variant-error-message p{
     }
 }
 
-.vaegt-pris, .product-price {
+.vaegt-pris, .product-price-single {
     font-size: 2rem;
     font-weight: bold;
     margin-bottom: 1rem;
@@ -113,7 +113,14 @@ span.error-icon, .variant-error-message p{
 }
 
 
-
+.product-under-tkassen{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 6rem;
+}
+.torsdagskassen-levering ul li{
+    margin-bottom: 1rem;
+}
 
 
 .tabs {
@@ -152,8 +159,15 @@ span.error-icon, .variant-error-message p{
     
 }
 
+.related-product{
+    display: flex;
+    gap: 2rem;
+    width: 100%;
+    justify-content: center;
+}
 .related-products h2{
     text-align: center;
+    margin-top: var(--large);
 }
 
 
